config prod api

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<!-- navbar.html - Version corrigée sans superposition -->
+<!-- navbar.html - Version corrigée - superposition et scroll résolus -->
 <!-- Structure principale -->
 <div class="app-wrapper">
   <!-- Sidebar -->
@@ -100,7 +100,7 @@
 
   <!-- Contenu principal -->
   <div class="main-content" [class.sidebar-collapsed]="isSidebarCollapsed">
-    <!-- Navbar principale - maintenant en sticky -->
+    <!-- Navbar principale - sticky -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <!-- Bouton menu mobile -->
